fixed abnormal spacing around some debug messages

--- a/public_html/crimp_assets/debug.css
+++ b/public_html/crimp_assets/debug.css
@@ -12,16 +12,17 @@ table.crimpDebug {
 */
 pre.crimpDebug {
 	background-color: #000;
-	border-width: 0px;
+	border-width: 0;
 	border-color: #000;
-	padding: 0px;
+	padding: 0;
+	margin: 0;
 }
 /* message box */
 .crimpDebugMsg {
 	color: #fff;
 	text-align: left;
 	vertical-align: top;
-	padding: 0px;
+	padding: 0;
 }
 /* status box */
 .crimpDebugStatus {
